--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-  font-family: Roboto-Regular, sans-serif;
+  font-family: sans-serif;
   margin: 0;
   padding: 0;
   position: relative;
